[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [build]
# rustc-args = ["-A", "dead_code"]

[dependencies]
serde = { version = "1.0.163", features = ["derive", "rc"] }
serde_json = "1.0.95"
serde_with = "3.0.0"
reqwest = { version = "0.11.17", features = ["json", "gzip", "deflate", "rustls-tls"] }
tokio-tungstenite = {version = "0.20.0", features = ["__rustls-tls", "handshake", "rustls-tls-native-roots"]}
tokio = { version = "1.28.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["codec"] }

futures="0.3.28"
log = "0.4.17"
async-trait = "0.1.68"
ring = "0.16.20"
base64 = "0.21.2"
hex = "0.4.3"
regex = "1.8.1"
num = "0.4"
serde_urlencoded = "0.7.1"
chrono = { version = "0.4.24", features = ["serde"] }
num_cpus = "1.15.0"
bitflags = "2.2.1"

anyhow = "1.0.71"
rs-leveldb = "0.1.5"
log4rs = "1.2.0"
rust_decimal = "1.29.1" 
rust_decimal_macros = "1.30.0"
ta = "0.5.0"

tls-listener = {version = "0.7.0", features = ["hyper-h1", "hyper-h2", "rustls"] }
hyper = {version = "0.14.27", features = ["server", "tcp", "http1", "http2"] }
tokio-rustls = "0.24.0"
rustls-pemfile = "1.0.2"
mime_guess = "2.0.4"
get_if_addrs = "0.5"